CSS fix: adjusted the CSS overflow-y property to auto so that a scrollbar only appears if content overflows the page

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   height: 100%;
   overflow: scroll;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
@@ -13,6 +14,7 @@ body {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  overflow-y: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Verdana", sans-serif;
   -webkit-font-smoothing: antialiased;
